terraform/routetable.tf
#route table
resource "aws_route_table" "terrapublic" {
  vpc_id = aws_vpc.terraform-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.terraInternetGateway.id
  }
  tags = {
    Name = "publicRouteTable"
  }
}

resource "aws_route_table" "terraprivate" {
  vpc_id = aws_vpc.terraform-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.terraInternetGateway.id
  }
  tags = {
    Name = "privateRouteTable"
  }
}
